add ETYPE keyword git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9441 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/utils/hetcasl.sty
+++ b/utils/hetcasl.sty
@@ -208,6 +208,8 @@
 \newcommand{\PREDS}[1][preds]{\KWC[##1]{preds}\xspace}
 \newcommand{\TYPE}[1][preds]{\KWC[##1]{type}\xspace}
 \newcommand{\TYPES}[1][preds]{\KWC[##1]{types}\xspace}
+\newcommand{\ETYPE}[1][preds]{\KWC[##1]{etype}\xspace}
+\newcommand{\ETYPES}[1][preds]{\KWC[##1]{etypes}\xspace}
 \newcommand{\CLASS}[1][preds]{\KWC[##1]{class}\xspace}
 \newcommand{\CLASSES}[1][preds]{\KWC[##1]{classes}\xspace}
 \newcommand{\FUN}[1][preds]{\KWC[##1]{fun}\xspace}
