--- a/doc/UserGuide.tex
+++ b/doc/UserGuide.tex
@@ -125,7 +125,7 @@ pdftitle={Hets User Guide}]
 \begin{document}
 
 \title{{\bf \protect{\LARGEHets} User Guide}\\ 
--- Version 0.73 --}
+-- Version 0.85 --}
 \author{Till Mossakowski, Christian Maeder, Klaus L\"{u}ttich\\[1em]
 DFKI Lab Bremen, Bremen, Germany.\\[1em]
 Comments to: hets@informatik.uni-bremen.de\\
@@ -690,13 +690,10 @@ of the proof calculus for heterogeneous development graphs.
 Details can be found in the \CASL Reference Manual \cite[IV:4]{CASL/RefManual}
 and in \cite{Habil,MossakowskiEtAl05,MossakowskiEtAl07b}.
 
-The following options let \Hets show the development graph of
+The following option lets \Hets show the development graph of
 a specification library:
 \begin{description}
-\item[\texttt{-g}, \texttt{--gui}]  Shows the development graph in a GUI window.
-\item[\texttt{-G}, \texttt{--only-gui}] Shows the development graph in a GUI window,
-and suppresses the writing of an output file.
-\end{description}
+\item[\texttt{-g}, \texttt{--gui}]  Shows the development graph in a GUI window.\end{description}
 
 \eat{
 Let us extend the above library \texttt{Order.casl}. One use of the
@@ -1011,7 +1008,7 @@ in abstract syntax trees in ATerm format, while \texttt{ast.baf}
 reads in the compressed ATerm format.
 The possible input types are:
 \begin{verbatim}
-             (casl|het|owl|hs|ast[.baf]|[tree.]gen_trm[.baf])
+             (casl|het|owl|hs|prf|omdoc|hpf|[tree.]gen_trm[.baf])
 \end{verbatim}
 
 \item[\texttt{-O DIR}, \texttt{--output-dir=DIR}] 
@@ -1027,10 +1024,8 @@ Specify \texttt{DIR} as  destination directory for output files.
             | thy
             | comptable.xml
             | (sig|th)[.delta]
-            | pp.(het|tex|html)
-            | graph.(exp.dot|dot|ps|davinci)
-            | ast.(het|trm|taf|html|xml)
-            | (fdg|hdg|dg)[.nax].(het|trm|taf|html|xml)
+            | pp.(het|tex)
+            | graph.(exp.dot|dot)
             | dfg[.c]
             | tptp[.c]
 \end{verbatim}
@@ -1093,12 +1088,6 @@ format for first-order theorem provers.
 chooses a translation option. \texttt{TRANS} is a colon-separated list 
 without blanks of one or more comorphism names (see Sect.~\ref{comorphisms}).
 
-\item[\texttt{-r RAW} or \texttt{--raw=RAW}] This option  allows one
-to influence the formatting in more detail.
-Here, \texttt{RAW} is \texttt{(ascii|text|(la)?tex)=STRING},
-and \texttt{STRING} is passed to the appropriate pretty-printer.
-The details of these options are to be fixed in the future only.
-
 \item[\texttt{-R}, \texttt{--recursive}] output also imported libraries.
 
 The other output formats are for future usage.
@@ -1122,7 +1111,7 @@ declaration. The default is \CASL.
 \item[\texttt{-n SPECS}, \texttt{--spec=SPECS}] 
 chooses a list of named specifications for processing
 \item[\texttt{-m FILE}, \texttt{--modelSparQ=FILE}] model check a qualitative calculus given in SparQ lisp notation \cite{SparQ06} against a \CASL specification
-\item[\texttt{-I}, \texttt{--interactive}] run \Hets in interactive mode (experimental)
+\item[\texttt{-I}, \texttt{--interactive}] run \Hets in interactive mode
 \end{description}
 
 \section{Proofs with \Hets}\label{sec:Proofs}
